fix: text-align in record item

--- a/src/Client/css/layer/game.sass
+++ b/src/Client/css/layer/game.sass
@@ -136,6 +136,7 @@
 
             .record-item
                 flex: 1
+                text-align: center
                 background: v.$app-black
                 border-radius: 0.7vw
                 color: v.$white
